--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,59 +1,209 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 main {
-	min-height: 80vh;
+  min-height: 80vh;
 }
 a {
-	text-decoration: none;
+  text-decoration: none;
 }
 .rating span {
-	margin: 0.1rem;
+  margin: 0.1rem;
 }
 .card-body {
-	padding: 5px;
+  padding: 5px;
 }
 h1 {
-	font-size: 1.8rem;
-	padding: 1 rem 0rem;
+  font-size: 1.8rem;
+  padding: 1 rem 0rem;
 }
 h2 {
-	font-size: 1.4rem;
-	padding: 0.5 rem 0rem;
+  font-size: 1.4rem;
+  padding: 0.5 rem 0rem;
 }
-input[type='number'] {
-	appearance: textfield;
+input[type="number"] {
+  appearance: textfield;
 }
 
-input[type='number']::-webkit-inner-spin-button,
-input[type='number']::-webkit-outer-spin-button,
-input[type='number']:hover::-webkit-inner-spin-button,
-input[type='number']:hover::-webkit-outer-spin-button {
-	appearance: none;
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]:hover::-webkit-inner-spin-button,
+input[type="number"]:hover::-webkit-outer-spin-button {
+  appearance: none;
 }
 Button {
-	margin-top: 1em;
+  margin-top: 1em;
 }
 .headLogo {
-	width: 200px;
-	height: 100px;
+  width: 200px;
+  height: 100px;
 }
 .navbar {
-	padding-top: 0px;
-	padding-bottom: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 * {
-	font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 main {
-	background-color: #f2f6fb;
+  background-color: #f2f6fb;
 }
 .form {
-	background-color: white;
-	border-radius: 10px;
+  background-color: white;
+  border-radius: 10px;
 }
 footer {
-	background-color: #1e3250;
-	color: white;
+  background-color: #1e3250;
+  color: white;
 }
 .react-datetime-picker__clear-button,
 .react-datetime-picker__calendar-button {
-	margin: 0;
+  margin: 0;
+}
+
+main:not(.overlay) {
+  padding: 0 !important;
+  min-width: 100vw !important;
+  margin: 0 !important;
+}
+.container:not(.overlay) {
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+.landing-nav {
+  position: absolute;
+  width: 100vw;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 1.25rem;
+}
+.btn-container {
+  display: flex;
+  align-items: center;
+  gap: 1.25rem;
+}
+.custom {
+  letter-spacing: 1.2px;
+  background-color: white;
+  outline: none !important;
+  border: 2px solid white;
+  padding: 0.5rem 1.25rem;
+  border-radius: 99px;
+  color: #cd1d1d;
+  font-weight: bold;
+  transition: all 0.4s ease;
+}
+.custom.primary {
+  color: white;
+  background-color: transparent;
+}
+.custom.primary:hover {
+  background-color: white;
+  color: #cd1d1d;
+}
+.custom:hover {
+  background-color: transparent;
+  color: white;
+}
+.overlay {
+  background: url("./landing_bg.jpg") no-repeat center;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  background-size: cover;
+}
+.landingPage {
+  position: relative;
+  width: 100vw;
+  overflow: hidden;
+  display: grid;
+  place-items: center;
+  height: 100vh;
+  background: rgba(205, 29, 29, 0.5);
+}
+.landing-content h1 {
+  color: #eee !important;
+  filter: drop-shadow(5px 5px rgba(0, 0, 0, 0.6));
+  font-size: 48px;
+  font-family: sans-serif;
+}
+.custom-form-container {
+  display: flex !important;
+  align-items: center;
+  justify-content: center !important;
+  gap: 0 !important;
+  min-width: 100vw;
+  max-width: 100vw;
+  min-height: 100vh;
+  max-height: 100vh;
+}
+.custom-form {
+  margin: 0 auto !important;
+  background-color: white;
+  border-radius: 4px;
+  display: grid;
+  position: relative;
+  width: 500px !important;
+  height: 600px !important;
+  border: 2px solid;
+  border-color: rgba(205, 29, 29, 0.09);
+
+  place-items: center;
+  min-height: fit-content !important;
+  min-width: fit-content !important;
+}
+.form-logo,
+.back {
+  position: absolute;
+  top: 0 !important;
+  transform: translateY(-50%);
+  object-fit: contain;
+  background-color: white;
+  max-width: 120px !important;
+  height: 120px !important;
+  border: 2px solid;
+  border-radius: 50%;
+  border-color: rgba(205, 29, 29, 0.09);
+  z-index: 1;
+}
+
+.custom-form * {
+  width: max-content !important;
+}
+.custom-form input {
+  background-color: #eee;
+}
+.fc-password {
+  position: relative;
+}
+.icon-holder {
+  display: flex;
+  cursor: pointer;
+  flex-direction: column;
+  width: fit-content;
+  align-items: flex-end;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  justify-content: center;
+}
+.back{
+  width: 40px !important;
+  height: 40px !important;
+  display: grid;
+  place-items: center;
+  background-color: #cd1d1d;
+  cursor: pointer;
+  color: white;
+  font-size: 24px;
+  right: 10px;
+}
+.back-text{
+  color: #cd1d1d;
+  visibility: none;
+}
+.back:hover .back-text{
+  
 }
